--- a/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
+++ b/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
@@ -128,13 +128,41 @@
             </div>
           </div>
 
-          <div [formGroup]="formDoc" class="ayo-middle pt-24" fxLayout="row">
-            <mat-form-field class="is-light" fxFlex="50">
-              <input matInput placeholder="Nomor KTP" type="text" formControlName="ktp">
-            </mat-form-field>
-            <mat-form-field class="is-light" fxFlex="50">
-              <input matInput placeholder="Nomor NPWP" type="text" formControlName="npwp">
-            </mat-form-field>
+          <div [formGroup]="formDoc" class="ayo-middle pt-24" fxLayout="column">
+            <div fxLayout="row" fxFlex="100">
+              <mat-form-field class="is-light" fxFlex="30">
+                <input matInput placeholder="Nomor KTP" type="text" formControlName="ktp">
+              </mat-form-field>
+              <div fxFlex="2"></div>
+              <div class="confirm btn-confirm py-16" fxLayout="row" fxFlex="50">
+                <button mat-raised-button type="button" class="confirmation-button" fxFlex="30"
+                  (click)="cekDokumen('ktp')">
+                  Lihat Dokumen
+                </button>
+                <div fxFlex="2"></div>
+                <button mat-raised-button type="button" class="confirmation-button" fxFlex="30"
+                  (click)="cekDokumenAkses('ktp')">
+                  Lihat Pemberian Akses
+                </button>
+              </div>
+            </div>
+            <div fxLayout="row" fxFlex="100">
+              <mat-form-field class="is-light" fxFlex="30">
+                <input matInput placeholder="Nomor NPWP" type="text" formControlName="npwp">
+              </mat-form-field>
+              <div fxFlex="2"></div>
+              <div class="confirm btn-confirm py-24" fxLayout="row" fxFlex="50">
+                <button mat-raised-button type="button" class="confirmation-button" fxFlex="30"
+                  (click)="cekDokumen('npwp')">
+                  Lihat Dokumen
+                </button>
+                <div fxFlex="2"></div>
+                <button mat-raised-button type="button" class="confirmation-button" fxFlex="30"
+                  (click)="cekDokumenAkses('npwp')">
+                  Lihat Pemberian Akses
+                </button>
+              </div>
+            </div>
           </div>
 
           <!-- <mat-form-field fxFlex="100" class="is-light">
