--- a/src/app/pages/user-management/private-label/orderto-supplier/index/orderto-supplier-index.component.html
+++ b/src/app/pages/user-management/private-label/orderto-supplier/index/orderto-supplier-index.component.html
@@ -5,7 +5,7 @@
   <div class="content p-24" *ngIf="!onLoad">
     <div class="table-wrapper">
       <div fxLayout="column" class="top-table pt-8 mb-8 pr-16 bb">
-        <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="space-between center"> 
+        <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="space-between center">
           <h2 class="pl-16">Daftar Pesanan</h2>
           <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
             <mat-icon>search</mat-icon>
@@ -16,40 +16,41 @@
         </div>
         <div fxLayout="row wrap" fxLayoutAlign="space-between center" fxLayoutGap="40px">
           <form [formGroup]="formFilter" autoComplete="off">
-              <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" class="top-table p-8" fxLayoutAlign="center center">
-                <mat-form-field  class="orders dropdown">
-                  <mat-select formControlName="status">
-                    <mat-option [value]="item.value" *ngFor="let item of statusFilter">{{item.name}}</mat-option>
-                  </mat-select>
-                </mat-form-field>
-                <mat-form-field class="orders datepicker is-light">
-                  <input matInput #from [matDatepicker]="dari" (focus)="dari.open()" placeholder="Dari Tanggal"
-                    formControlName="from" (dateChange)="setMinDate(formFilter.get('from').value)" readonly>
-                  <button mat-button *ngIf="formFilter.get('from').value" matSuffix mat-icon-button aria-label="Clear"
-                    (click)="formFilter.get('from').setValue('')">
-                    <mat-icon>close</mat-icon>
-                  </button>
-                  <mat-datepicker-toggle matSuffix [for]="dari">
-                    <mat-icon matDatepickerToggleIcon>calendar_today</mat-icon>
-                  </mat-datepicker-toggle>
-                  <mat-datepicker #dari></mat-datepicker>
-                </mat-form-field>
-                <mat-form-field class="orders datepicker is-light">
-                  <input matInput [matDatepicker]="sampai" (focus)="sampai.open()" [min]="minDate"
-                    placeholder="Sampai Tanggal" formControlName="to" readonly>
-                  <button mat-button *ngIf="formFilter.get('to').value" matSuffix mat-icon-button aria-label="Clear"
-                    (click)="formFilter.get('to').setValue('')">
-                    <mat-icon>close</mat-icon>
-                  </button>
-                  <mat-datepicker-toggle matSuffix [for]="sampai">
-                    <mat-icon matDatepickerToggleIcon>calendar_today</mat-icon>
-                  </mat-datepicker-toggle>
-                  <mat-datepicker #sampai></mat-datepicker>
-                </mat-form-field>
-              </div>
+            <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" class="top-table p-8"
+              fxLayoutAlign="center center">
+              <mat-form-field class="orders dropdown">
+                <mat-select formControlName="status">
+                  <mat-option [value]="item.value" *ngFor="let item of statusFilter">{{item.name}}</mat-option>
+                </mat-select>
+              </mat-form-field>
+              <mat-form-field class="orders datepicker is-light">
+                <input matInput #from [matDatepicker]="dari" (focus)="dari.open()" placeholder="Dari Tanggal"
+                  formControlName="from" (dateChange)="setMinDate(formFilter.get('from').value)" readonly>
+                <button mat-button *ngIf="formFilter.get('from').value" matSuffix mat-icon-button aria-label="Clear"
+                  (click)="formFilter.get('from').setValue('')">
+                  <mat-icon>close</mat-icon>
+                </button>
+                <mat-datepicker-toggle matSuffix [for]="dari">
+                  <mat-icon matDatepickerToggleIcon>calendar_today</mat-icon>
+                </mat-datepicker-toggle>
+                <mat-datepicker #dari></mat-datepicker>
+              </mat-form-field>
+              <mat-form-field class="orders datepicker is-light">
+                <input matInput [matDatepicker]="sampai" (focus)="sampai.open()" [min]="minDate"
+                  placeholder="Sampai Tanggal" formControlName="to" readonly>
+                <button mat-button *ngIf="formFilter.get('to').value" matSuffix mat-icon-button aria-label="Clear"
+                  (click)="formFilter.get('to').setValue('')">
+                  <mat-icon>close</mat-icon>
+                </button>
+                <mat-datepicker-toggle matSuffix [for]="sampai">
+                  <mat-icon matDatepickerToggleIcon>calendar_today</mat-icon>
+                </mat-datepicker-toggle>
+                <mat-datepicker #sampai></mat-datepicker>
+              </mat-form-field>
+            </div>
           </form>
 
-          <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px"> 
+          <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
             <div class="button-row">
               <button mat-raised-button style="width: 100px" color="primary" (click)="updateFilter()">FILTER</button>
             </div>
@@ -102,15 +103,18 @@
         <ngx-datatable-column name="Status" prop="status" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <p [class]="'status text-truncate h6 p-4 status-order mat-' + row.status + '-color'">
-              {{row.status_indo.replace('-', ' ').toUpperCase()}}
+              {{row.status_indo ? row.status_indo.replace('-', ' ').toUpperCase() : row.status_indo}}
             </p>
           </ng-template>
         </ngx-datatable-column>
         <ngx-datatable-column name="Action" headerClass="textright" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <div class="button-row" style="margin-left: -10px">
+            <div class="button-row" style="margin-left: -10px; padding-top: 5px; padding-bottom: 5px;">
               <button mat-stroked-button color="" (click)="getDetailOrder(row.id)">
                 CETAK PO
+              </button>
+              <button mat-stroked-button color="" (click)="getDokumen(row)" style="margin-top: 2px;">
+                DOKUMEN
               </button>
             </div>
           </ng-template>
