fixing failed build 2925 - 2

--- a/src/app/pages/user-management/wholesaler/dokumen-dialog/dokumen-dialog.component.html
+++ b/src/app/pages/user-management/wholesaler/dokumen-dialog/dokumen-dialog.component.html
@@ -76,8 +76,7 @@
     <div class="p-16">
       <div fxFlexLayout="row" fxLayoutAlign="start center" fxLayout.lt-md="row" fxLayoutGap="20px"
         fxLayoutGap.lt-md="10px" fxFlex="1 0 auto">
-        <button type="button" mat-stroked-button color="primary" (click)="dialogRef.close()"
-          [disabled]="redirecting">Tutup</button>
+        <button type="button" mat-stroked-button color="primary" (click)="dialogRef.close()">Tutup</button>
       </div>
     </div>
   </div>
