--- a/src/app/pages/sku-management/product/edit/product-edit.component.html
+++ b/src/app/pages/sku-management/product/edit/product-edit.component.html
@@ -354,7 +354,7 @@
                       <mat-divider></mat-divider>
                       <div fxFlex="1 0 auto" formArrayName="listProdukPrivateLabel"
                         *ngFor="let item of wil.get('listProdukPrivateLabel')['controls']; let j = index;">
-                        <div [formGroupName]="i">
+                        <div [formGroupName]="j">
                           <mat-list-item class="custom-height mb-8">
                             <div class="pl-8" fxFlex="auto" fxLayoutAlign="space-between center" fxLayout="row">
                               <div fxFlex="15">
