fixing PL point 9,8,4,1

--- a/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
+++ b/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
@@ -133,12 +133,12 @@
               <mat-form-field class="is-light" fxFlex="30">
                 <input matInput placeholder="Nomor KTP" type="text" formControlName="ktp">
               </mat-form-field>
-              <div fxFlex="2"></div>
+              <div fxFlex="2"><a #downloadLink></a></div>
               <div class="confirm btn-confirm py-16" fxLayout="row" fxFlex="50">
-                <button mat-raised-button type="button" class="confirmation-button" fxFlex="30"
-                  (click)="cekDokumen('ktp')">
+                <a [href]="detailWholesaler.ktp_image_url" mat-raised-button type="button" class="confirmation-button"
+                  fxFlex="30" target="_self" download>
                   Lihat Dokumen
-                </button>
+                </a>
                 <div fxFlex="2"></div>
                 <button mat-raised-button type="button" class="confirmation-button" fxFlex="30"
                   (click)="cekDokumenAkses('ktp')">
@@ -152,10 +152,10 @@
               </mat-form-field>
               <div fxFlex="2"></div>
               <div class="confirm btn-confirm py-24" fxLayout="row" fxFlex="50">
-                <button mat-raised-button type="button" class="confirmation-button" fxFlex="30"
-                  (click)="cekDokumen('npwp')">
+                <a [href]="detailWholesaler.npwp_image_url" mat-raised-button type="button" class="confirmation-button"
+                  fxFlex="30" target="_self" download>
                   Lihat Dokumen
-                </button>
+                </a>
                 <div fxFlex="2"></div>
                 <button mat-raised-button type="button" class="confirmation-button" fxFlex="30"
                   (click)="cekDokumenAkses('npwp')">
