--- a/src/app/pages/src-catalogue/vendor-setting/vendor-setting.component.scss
+++ b/src/app/pages/src-catalogue/vendor-setting/vendor-setting.component.scss
@@ -167,3 +167,42 @@ mat-form-field.otc {
   font-size: 18px;
   color: #666;
 }
+
+.content-body {
+  .body-layout {
+    border-radius: 6px;
+    border: 1px solid #ddd;
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.35);
+    width: 100%;
+    height: 100px;
+    padding: 10px;
+    background-color: #eee;
+    .body-text {    
+      background-color: #eee;
+      color: #888;
+      width: 100%;
+      height: 80px;
+      resize: none;
+    }
+    .body-text:focus {
+      background-color: #fff;
+      color: #222;
+    }
+  }
+  .body-layout:focus-within {
+    background-color: #fff;
+  }
+  
+  .body-delete {
+    width: 130px;
+    height: 100px;
+    color: #888;
+    mat-icon {
+      color: #888;
+    }
+    mat-icon:hover {
+      cursor: pointer;
+      color: #DC1E2D;
+    }
+  }
+}
