--- a/src/app/pages/src-catalogue/vendor-setting/vendor-template-message/vendor-template-message.component.html
+++ b/src/app/pages/src-catalogue/vendor-setting/vendor-template-message/vendor-template-message.component.html
@@ -20,6 +20,9 @@
             (blur)="onBlur(item, i)"></textarea>
         </div>
         <div class="body-delete pl-8" fxLayout="row" fxLayoutAlign="center center">
+          <mat-icon (click)="onDeleteTemplate(item, i, 'retailer')">delete</mat-icon>
+        </div>
+        <div class="body-delete pl-8" fxLayout="row" fxLayoutAlign="center center">
           <mat-icon (click)="resetToDefault(i)">refresh</mat-icon>
           Reset to default
         </div>
@@ -29,7 +32,11 @@
     </div>
   </div>
   <div class="footer mt-20" fxLayout="row" fxLayoutAlign="start center">
-    <button mat-button class="add" (click)="resetToDefaultAll()">
+    <button mat-button class="add" (click)="addTemplate('retailer')" *ngIf="vendorTemplates.length < 10">
+      <mat-icon class="secondary-text">add</mat-icon>
+      Tambah Pesan
+    </button>
+    <button mat-button class="add ml-20" (click)="resetToDefaultAll()">
       <mat-icon class="secondary-text">refresh</mat-icon>
       Reset All to Default
     </button>
