--- a/src/app/pages/dte/template/create/template-create.component.html
+++ b/src/app/pages/dte/template/create/template-create.component.html
@@ -303,14 +303,6 @@
             *ngFor="let item of templateTaskForm.get('questions')['controls']; let i=index;">
             <div [formGroupName]="i" class="py-24">
               <div class="question-list" fxLayout="row" fxLayoutAlign="space-between start" fxFlex="1 0 auto">
-                <h2 fxFlex="2" style="margin-top: 12px;margin-right: 5px;">{{ i+1 }}.</h2>
-                <mat-form-field fxFlex="68" class="question is-light"
-                  *ngIf="item.get('typeSelection').value['value'] !== 'stock_check'">
-                  <textarea matInput [froalaEditor]="options" formControlName="question"
-                    (focus)="$event.target.select()"
-                    (change)="defaultValue($event, 'questions', 'Pertanyaan', i)"></textarea>
-                </mat-form-field>
-
                 <mat-form-field fxFlex="68" class="question is-light"
                   *ngIf="item.get('typeSelection').value['value'] == 'stock_check' && listProductSelected[i].product">
                   <input matInput type="text" placeholder="Nama Produk" (input)="keyUp.next($event.target.value)"
@@ -323,7 +315,7 @@
                   </mat-autocomplete>
                 </mat-form-field>
 
-                <div fxFlex="5" fxLayout="column" fxLayoutAlign="start start" fxFlex="1 0 auto"
+                <div fxFlex="30" fxLayout="column" fxLayoutAlign="center end" fxFlex="1 0 auto"
                   *ngIf="!checkWording(item.get('type').value)">
                   <button mat-icon-button matTooltip="Sisipkan Video" matTooltipPosition="below"
                     class="add-image secondary-text" (click)="uploadVideo('question', i)"
@@ -358,8 +350,25 @@
                   </mat-select>
                 </mat-form-field>
               </div>
-
-
+              <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+              <h2 fxFlex="2" style="margin-top: 12px;margin-right: 5px;">{{ i+1 }}.</h2>
+              <mat-form-field fxFlex="100" class="question is-light"
+                *ngIf="item.get('typeSelection').value['value'] !== 'stock_check'">
+                <textarea matInput [froalaEditor]="options" formControlName="question"
+                  (focus)="$event.target.select()"
+                  (change)="defaultValue($event, 'questions', 'Pertanyaan', i)"></textarea>
+              </mat-form-field>
+              </div>
+              <!-- <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+                <mat-form-field fxFlex="100" class="descInput exportTextarea desc-template" floatLabel="never">
+                  <textarea matInput [froalaEditor]="options" formControlName="description" id="froala-editor"
+                  ></textarea>
+                  <mat-error
+                    *ngIf="templateTaskForm.controls['description'].hasError('required') && templateTaskForm.controls['description'].touched">
+                    Deskripsi Tugas harus diisi
+                  </mat-error>
+                </mat-form-field>
+              </div> -->
               <div class="py-16" fxLayout="row" fxLayoutAlign="start start" fxFlex="1 0 auto"
                 *ngIf="item.get('question_image').value && item.get('type').value !== 'stock_check'">
                 <div fxLayout="row" fxLayoutAlign="start start">
