--- a/src/app/pages/dte/template/edit/template-edit.component.html
+++ b/src/app/pages/dte/template/edit/template-edit.component.html
@@ -311,13 +311,6 @@
             *ngFor="let item of templateTaskForm.get('questions')['controls']; let i=index;">
             <div [formGroupName]="i" class="py-24">
               <div class="question-list" fxLayout="row" fxLayoutAlign="space-between start" fxFlex="1 0 auto">
-                <h2 fxFlex="2" style="margin-top: 12px;margin-right: 5px;">{{ i+1 }}.</h2>
-                <mat-form-field fxFlex="68" class="question is-light"
-                  *ngIf="item.get('typeSelection').value['value'] !== 'stock_check'">
-                  <textarea matInput [froalaEditor]="options" formControlName="question"
-                    (focus)="$event.target.select()"
-                    (change)="defaultValue($event, 'questions', 'Pertanyaan', i)"></textarea>
-                </mat-form-field>
 
                 <mat-form-field fxFlex="68" class="question is-light"
                   *ngIf="item.get('typeSelection').value['value'] == 'stock_check' && listProductSelected[i].product">
@@ -333,7 +326,7 @@
                   </mat-autocomplete>
                 </mat-form-field>
 
-                <div fxFlex="5" fxLayout="column" fxLayoutAlign="start start" fxFlex="1 0 auto">
+                <div fxFlex="5" fxLayout="column" fxLayoutAlign="center end" fxFlex="1 0 auto">
                   <button mat-icon-button matTooltip="Sisipkan Video" matTooltipPosition="below"
                     class="add-image secondary-text" (click)="uploadVideo('question', i)"
                     *ngIf="item.get('typeSelection').value['value'] !== 'stock_check'">
@@ -362,6 +355,15 @@
                       <mat-icon>{{selection.icon}}</mat-icon> {{selection.name}}
                     </mat-option>
                   </mat-select>
+                </mat-form-field>
+              </div>
+              <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+              <h2 fxFlex="2" style="margin-top: 12px;margin-right: 5px;">{{ i+1 }}.</h2>
+                <mat-form-field fxFlex="100" class="question is-light"
+                  *ngIf="item.get('typeSelection').value['value'] !== 'stock_check'">
+                  <textarea matInput [froalaEditor]="options" formControlName="question"
+                    (focus)="$event.target.select()"
+                    (change)="defaultValue($event, 'questions', 'Pertanyaan', i)"></textarea>
                 </mat-form-field>
               </div>
               <div class="py-16" fxLayout="row" fxLayoutAlign="start start" fxFlex="1 0 auto"
